# LazyAIVideoEditor

./: README.md  clip_transcribe.py  clipobjlist.db  join_files.py  join_files_0.0.1.py  my_dynamic_tk_entry_007.py  narcisist_transcribe_0.0.4.py  objclip_analysis.py  objclip_analysis_0.0.1.py  pyproject.toml  wrapper_LazyAIVideoEditor.py  wrapper_LazyVideoEditor_0.0.3.py
.github/workflows/: main.yml
prepare_videos/: prepare_videos_0.0.4.py
