[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LazyAIVideoEditor"
version = "0.0.1"
description = "AI video editor"
authors = [
    { name="Jithesh Kuyyalil", email="jithesh82@gmail.com" }
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["example", "simple", "package"]

[project.urls]
homepage = "https://jitheshkuyyalil.com"
repository = "https://github.com/jithesh82/LazyAIVideoEditor"

[project.dependencies]
# Add your dependencies here, e.g., numpy = ">=1.18.0"
dependencies = ["openai-whisper>=v20230314"]

[tool.setuptools]
packages = ["my_simple_package"]  # List your packages here

[tool.setuptools.scripts]
# Define command line scripts here
# example-script = "my_simple_package.module:main"

