[project]
name = "LazyAIVideoEditor"
version = "0.0.1"
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [
  {email = "jithesh82@gmail.com"},
  {name = "Jithesh Kuyyalil"}
]
maintainers = [
  {name = "Jithesh Kuyyalil", email = "jithesh82@gmail.com"}
]
classifiers = [
  "Development Status :: 1 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "openai-whisper >= v20231117",
]


[project.urls]
homepage = "https://jitheshkuyyalil.com"
documentation = "https://readthedocs.org"
repository = "https://github.com/jithesh82/LazyAIVideoEditor"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
